# Proyecto-ia-dental

./: .gitignore  ENTREGA_BACKEND_FASE_1.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  crear_obtener_user.txt  docker-compose.mongo.yml  pyproject.toml  requerimets.txt  requirements.txt  upload_test.py  validate_implementation.py
backend/src/: app.py
backend/src/api/: __init__.py  context.py  mutations.py  queries.py  schema.py  types.py
backend/src/config/: __init__.py  mongodb.py  settings.py
backend/src/domain/: __init__.py  exceptions.py
backend/src/events/: __init__.py  publishers.py
backend/src/inference/: __init__.py  device_resolver.py  model_adapter.py  model_loader.py
backend/src/persistence/: __init__.py  models.py  repository.py  user_models.py  user_repository.py
backend/src/services/: __init__.py  analysis_service.py  auth_service.py  inference_service.py  password_service.py  token_service.py  upload_service.py
backend/src/utils/: validators.py
backend/tests/: __init__.py  test_analysis_service_smoke.py  test_graphql_smoke.py  test_smoke_core.py
docker/: README.md  docker-compose.yml  recover-kafka-zk.ps1  recover-kafka-zk.sh
entrenamiento ia/: DOCUMENTACION_ENTRENAMIENTO_IA.md  DOCUMENTACION_ENTRENAMIENTO_IA_02.md  README.md  requirements.txt
entrenamiento ia pruebas/: .gitignore  DOCUMENTACION_ENTRENAMIENTO_IA.md  README.md  data.yaml  requirements.txt
frontend/: .dockerignore  .env  Dockerfile  IMPLEMENTATION_COMPLETE.md  LOGIN_CHANGES_SUMMARY.md  LOGIN_IMPLEMENTATION.md  QUICK_SUMMARY.md  README.md  (+7 more)
(+99 files in other folders)
